--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,9 +6,22 @@ jobs:
   run-github-actions: 
     runs-on: ubuntu-latest
     steps:
+      - name: List files
+        run: |
+          pwd
+          ls
       - name: simple js action
         uses: actions/hello-world-javascript-action@v1
         with:
           who-to-greet: Manasa
+
+      - name: checkout
+        uses: actions/checkout@v1
+
+      - name: List files
+        run: |
+          pwd
+          ls 
+      
       - name: log greeting time
         run: echo "{{ steps.greet.outputs.time }}"
