--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,9 @@
 name: Actions workflow
 
-on: [push]
+on: 
+  push:
+  pull_request:
+    types: [opened, closed, reopened, assigned]
 
 jobs: 
   run-github-actions: 
