action type cron

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,9 @@
 name: Actions workflow
 
 on: 
-  push:
+  schedule:
+    - cron: "0/2 * * * *"
+  # push:
   pull_request:
     types: [opened, closed, reopened, assigned]
 
